Fix the asset to handle multiple assets